# qlik_df_api

./: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
app/: __init__.py  client.py  db.py  main.py  models.py  schemas.py
app/api/: routes.py
app/core/: __init__.py  config.py
app/qlik/: __init__.py  api_client.py  automation.py  processor.py
app/remote/: __init__.py  client.py  csv_repository.py  impala.py  schemas.py
docs/: cloudflare-qlik-deployment.md  qlik-cloud-api.md
docs/superpowers/plans/: 2026-07-16-qlik-playwright.md
docs/superpowers/specs/: 2026-07-16-qlik-playwright-design.md
docs/testing/: qlik-python-api.tdd.md
remote_server/: .env.example  __init__.py  config.py  main.py
src/: cli.ts  config.ts
src/qlik/: errors.ts  parsers.ts  qlik.client.ts  selectors.ts  types.ts
src/qlik/pages/: dataflow.page.ts  hub.page.ts  login.page.ts  tenant.page.ts
tests/api/: test_health.py  test_remote_server.py
tests/unit/: config.test.ts  parsers.test.ts  qlik.client.test.ts  test_automation_selection.py  test_client.py  test_config.py  test_csv_repository.py  test_dataflow_processor.py  test_remote_client.py
tests/unit/pages/: dataflow.page.test.ts  hub.page.test.ts  tenant.page.test.ts
