[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qlik-df-api"
version = "0.1.0"
description = "API para automatizar Qlik Cloud y registrar resultados en SQLite/PostgreSQL"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "aiosqlite>=0.20,<1.0",
  "asyncpg>=0.29,<1.0",
  "httpx>=0.27,<1.0",
  "playwright>=1.50,<2.0",
  "impyla>=0.19,<1.0",
  "pandas>=2.2,<3.0",
  "pyarrow>=17.0,<20.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=6.0,<7.0",
]
dev = [
  "ruff>=0.9,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.coverage.run]
omit = ["app/qlik/automation.py"]

[tool.setuptools.packages.find]
include = ["app*"]
